[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = chaostoolkit-slack
url = https://chaostoolkit.org
project_urls =
    Docs: RTD = https://chaostoolkit.org
    CI: GitHub = https://github.com/chaostoolkit-incubator/chaostoolkit-slack/actions
    GitHub: issues = https://github.com/chaostoolkit-incubator/chaostoolkit-slack/issues
    GitHub: repo = https://github.com/chaostoolkit-incubator/chaostoolkit-slack
description = Slack extension for the Chaos Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Chaos Toolkit
author_email = contact@chaostoolkit.org
zip_safe = False
license_file = LICENSE
platforms = any
license = Apache License Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    pytest_runner
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    chaostoolkit-lib~=1.27
    logzero
    slackclient~=2.9
    slack_sdk
tests_require = 
    black
    coverage
    flake8
    isort
    pytest>=6.0
    pytest-cov
    pytest-sugar

[flake8]
max-line-length=80

[tool:isort]
line_length=80

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov chaosslack
    --cov-report term-missing:skip-covered
    --cov-report xml
    -p no:warnings
